init include/exclude system app switcher

--- a/app/src/main/res/menu/menu_exempt_app.xml
+++ b/app/src/main/res/menu/menu_exempt_app.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/hide_system_apps_label"
+        android:title="@string/menu_action_exempt_app_hide_system_apps"
+        android:textAllCaps="false"
+        android:capitalize="none"
+        app:showAsAction="always|collapseActionView" />
+    <item
+        android:id="@+id/hide_system_apps"
+        android:title="Switch"
+        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
+        app:showAsAction="always"
+        />
+
     <item android:id="@+id/action_search_app"
         android:title="@string/exempt_app_search_title"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
-
     <item
         android:id="@+id/action_save_exempt_apps"
+        android:icon="@drawable/ic_action_save"
+        android:orderInCategory="100"
         android:title="@string/menu_action_exempt_app_save"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always|collapseActionView"
         />
+
 </menu>
