--- a/app/src/main/res/layout/activity_server_list.xml
+++ b/app/src/main/res/layout/activity_server_list.xml
@@ -7,4 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".servers.activity.ServerListActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_add_24" />
 </FrameLayout>
