--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
             android:ems="10"
-            android:hint="@string/remote_addr"
+            android:hint="@string/remote_address"
             android:inputType="textUri"
             android:textColorHint="#78909C"
             android:textSize="20sp"
@@ -143,7 +143,7 @@
             android:layout_marginEnd="16dp"
             android:autofillHints=""
             android:ems="10"
-            android:hint="@string/trojan_url"
+            android:hint="@string/trojan_uri"
             android:inputType="textUri"
             android:textColorHint="#78909C"
             android:textSize="20sp"
