--- a/app/src/main/res/layout/item_server.xml
+++ b/app/src/main/res/layout/item_server.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingStart="15dp"
-    android:paddingEnd="15dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingStart="15dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="15dp"
+    android:paddingBottom="5dp">
 
     <TextView
-        tools:text="www.google.com"
         android:id="@+id/serverAddrTv"
-        android:textSize="16sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_weight="4"
+        android:height="32dp"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
+        tools:text="www.google.com" />
 
-    <Button
-        android:id="@+id/deleteServerBtn"
-        android:text="@string/server_list_delete_btn"
-        android:layout_gravity="end"
-        android:colorAccent="@android:color/holo_red_light"
-        style="@style/PrimaryFlatButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/modifyServerIb"-->
-<!--        style="@style/CommonImageButton"-->
-<!--        android:src="@android:drawable/ic_menu_edit"-->
-<!--        android:layout_gravity="center_vertical|end"-->
-<!--        android:layout_width="20dp"-->
-<!--        android:layout_height="20dp" />-->
+        <Button
+            android:id="@+id/deleteServerBtn"
+            style="@style/PrimaryFlatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:height="32dp"
+            android:maxWidth="50dp"
+            android:text="@string/server_list_delete_btn"
+            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
 
-</FrameLayout>
+    </LinearLayout>
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/modifyServerIb"-->
+    <!--        style="@style/CommonImageButton"-->
+    <!--        android:src="@android:drawable/ic_menu_edit"-->
+    <!--        android:layout_gravity="center_vertical|end"-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="20dp" />-->
+
+</LinearLayout>
