--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".settings.SettingsActivity">
+    tools:context=".ui.settings.SettingsActivity">
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/ipv6Switch"
