--- a/app/src/main/res/layout/activity_add_server.xml
+++ b/app/src/main/res/layout/activity_add_server.xml
@@ -12,7 +12,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
     android:orientation="vertical"
-    tools:context=".ui.servers.activity.AddServerActivity">
+    tools:context=".activities.servers.activity.AddServerActivity">
 
     <EditText
         android:id="@+id/remote_address"
