--- a/app/src/main/res/layout/activity_scan_qrcode.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.tile.qrcode.ScanQRCodeActivity">
+    tools:context=".activities.ScanQRCodeActivity">
 
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/zxingview"
