--- a/app/src/main/res/layout/item_app_info.xml
+++ b/app/src/main/res/layout/item_app_info.xml
@@ -1,25 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/CommonListItemLayout"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    style="@style/CommonListItemLayout"
+    android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/appNameTv"
+    <ImageView
+        android:id="@+id/appIV"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        >
+    </ImageView>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:drawablePadding="3dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="false"
-        android:textSize="@dimen/text_size"
-        tools:text="appNameTv" />
+        android:orientation="vertical"
+        android:id="@+id/appName"
+        android:layout_marginLeft="56dp"
+        android:layout_gravity="center_vertical" >
+        <TextView
+            android:id="@+id/appNameTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size"
+            tools:text="appNameTv" />
+
+        <TextView
+            android:id="@+id/appPackageNameTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="3dp"
+            android:singleLine="true"
+            android:textSize="@dimen/small_text_size"
+            tools:text="appPackageNameTv" />
+    </LinearLayout>
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/appExemptSwitch"
-        android:layout_gravity="end|center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center_vertical" />
 
 </FrameLayout>
